--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/hello.py": {
-      "runtime": "@vercel/python"
+    "api/*.py": {
+      "runtime": "python3.9"
     }
   }
 }
